Understand competition metric and fix train csv file

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1,18 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": ""
-    }
-   },
-   "outputs": [],
+   "cell_type": "raw",
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": ""
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -646,7 +645,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -666,7 +669,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
